force-app/main/default/objects/Trainer__c/Trainer__c.object-meta.xml
<CustomObject>
    <label>Trainer</label>
    <nameField>
        <displayFormat>T-{000}</displayFormat>
        <label>Trainer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>