force-app/main/default/objects/Trainer__c/fields/Experience_in_Years__c.field-meta.xml
<CustomField>
    <fullName>Experience_in_Years__c</fullName>
    <label>Experience in Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>