force-app/main/default/objects/Trainer__c/fields/Trainer_Name_Set__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Name_Set__c</fullName>
    <label>Trainer Name Set</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>