force-app/main/default/objects/Trainer__c/recordTypes/America.recordType-meta.xml
<RecordType>
    <fullName>America</fullName>
    <active>true</active>
    <label>America</label>
</RecordType>