force-app/main/default/objects/Trainer__c/recordTypes/Asia.recordType-meta.xml
<RecordType>
    <fullName>Asia</fullName>
    <active>true</active>
    <label>Asia</label>
</RecordType>