force-app/main/default/objects/Trainer__c/recordTypes/Native_English.recordType-meta.xml
<RecordType>
    <fullName>Native_English</fullName>
    <active>true</active>
    <label>Native English</label>
</RecordType>