force-app/main/default/objects/Trainer__c/listViews/Spl_Queue_Trainer.listView-meta.xml
<ListView>
    <fullName>Spl_Queue_Trainer</fullName>
    <filterScope>Queue</filterScope>
    <label>Spl Queue</label>
    <queue>Spl_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>